WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239490
[WinCairo] Fix a compile error due to InspectorResourceURLSchemeHandler
https://bugs.webkit.org/show_bug.cgi?id=239490
Summary
[WinCairo] Fix a compile error due to InspectorResourceURLSchemeHandler
Yousuke Kimoto
Reported
2022-04-19 03:45:57 PDT
When WinCaior is built with REMOTE_INSPECTOR, the following compiler error happens: Source\WebKit\UIProcess\Inspector\win\RemoteWebInspectorUIProxyWin.cpp(130,49): error C2653: 'InspectorResourceURLSchemeHandler': RemoteWebInspectorUIProxyWin requires the declaration of InspectorResourceURLSchemeHandler.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-05-11 18:45:21 PDT
Committed
r294086
(
250476@main
): <
https://commits.webkit.org/250476@main
> Reviewed commits have been landed. Closing PR #565 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-05-11 18:46:14 PDT
<
rdar://problem/93143442
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug