[WinCairo] Fix a compile error due to InspectorResourceURLSchemeHandler https://bugs.webkit.org/show_bug.cgi?id=239490

Reviewed by Yusuke Suzuki.

* UIProcess/Inspector/win/RemoteWebInspectorUIProxyWin.cpp:

Canonical link: https://commits.webkit.org/250476@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294086 268f45cc-cd09-0410-ab3c-d52691b4dbfc